<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_driver">

    <fragment
        android:id="@+id/navigation_driver"
        android:name="com.jb.dev.cabapp_admin.fragment.Driver.DriverFragment"
        android:label="@string/driver"
        tools:layout="@layout/fragment_driver" />

    <fragment
        android:id="@+id/navigation_cab"
        android:name="com.jb.dev.cabapp_admin.fragment.Cab.CabFragment"
        android:label="@string/cab"
        tools:layout="@layout/fragment_cab" />

    <fragment
        android:id="@+id/navigation_booking"
        android:name="com.jb.dev.cabapp_admin.fragment.booking.BookingFragment"
        android:label="@string/booking"
        tools:layout="@layout/fragment_booking" />

</navigation>