<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            tools:context="com.example.cabbookingapplication.activites.UserRegistrationActivity">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">


                <EditText
                    android:id="@+id/cab_et_cabname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_cab_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <EditText
                    android:id="@+id/cab_et_cabnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_cab_number"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <EditText
                    android:id="@+id/cab_et_per_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_cab_per_capacity"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <EditText
                    android:id="@+id/cab_et_laugage_capacity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/hint_cab_laugage_capacity"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_cab_driver">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/cab_spinner_driver"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/fragment_outline_text_fields_dropdown_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cab_area">

                    <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                        android:id="@+id/cab_spinner_area"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cab_btn_Ok"
                    style="@style/Widget.MaterialComponents.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:padding="10dp"
                    android:text="@string/ok"
                    android:textColor="@color/colorWhite"
                    app:backgroundTint="@color/colorAccent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cab_btn_Cancel"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorPrimaryDark" />

            </LinearLayout>
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminateTint="@color/colorAccent"
            android:visibility="invisible" />
    </RelativeLayout>

</androidx.core.widget.NestedScrollView>
